11712702-project2/test/test_11712702_5.out
Error type 11 at Line 15: function bb is used without definition
Error type 8 at Line 15: incompatiable return type
